.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-wallpaper
  namespace: http-wallpaper
  labels:
    app: http-wallpaper
spec:
  selector:
    matchLabels:
      app: http-wallpaper
  template:
    metadata:
      labels:
        app: http-wallpaper
    spec:
      containers:
      - image:  mitaka8/wallpapers
        name:  wallpapers
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  8080
          name:  http-web
        volumeMounts:
        - mountPath: /opt/wallpapers/assets
          name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: http-wallpaper-images
