.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-wallpaper 
spec:
  selector:
    app: http-wallpaper
  ports:
  - port: 80
    name: http-web
    targetPort: 8080
