.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-wallpaper-ingress
  namespace: http-wallpaper
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wallpaper.mitaka.nl
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'

spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - wallpaper.mitaka.nl
      secretName: wallpaper-mitaka-nl-tls
  rules:
  - host: wallpaper.mitaka.nl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-wallpaper
            port: 
              number: 80
